03-ReconocedorDeCategoriasSintacticasEnC/parser.output
Terminales no usados en la gramática

    OPERADOR_DE_COMPARACION
    DESPLAZAMIENTO_A_DERECHA
    DESPLAZAMIENTO_A_IZQUIERDA


Gramática

    0 $accept: unidad_de_traduccion $end

    1 unidad_de_traduccion: declaracion_externa
    2                     | unidad_de_traduccion declaracion_externa

    3 declaracion_externa: definicion_de_funcion
    4                    | declaracion

    5 definicion_de_funcion: declarador sentencia_compuesta
    6                      | declarador lista_de_declaraciones sentencia_compuesta
    7                      | especificadores_de_declaracion declarador sentencia_compuesta
    8                      | especificadores_de_declaracion declarador lista_de_declaraciones sentencia_compuesta

    9 declaracion: especificadores_de_declaracion ';'
   10            | especificadores_de_declaracion lista_de_declaradores_inicial ';'

   11 lista_de_declaraciones: declaracion
   12                       | lista_de_declaraciones declaracion

   13 especificadores_de_declaracion: especificador_de_clase_de_almacenamiento
   14                               | especificador_de_clase_de_almacenamiento especificadores_de_declaracion
   15                               | especificador_de_tipo
   16                               | especificador_de_tipo especificadores_de_declaracion
   17                               | calificador_de_tipo
   18                               | calificador_de_tipo especificadores_de_declaracion

   19 especificador_de_clase_de_almacenamiento: AUTO
   20                                         | REGISTER
   21                                         | STATIC
   22                                         | EXTERN
   23                                         | TYPEDEF

   24 especificador_de_tipo: VOID
   25                      | CHAR
   26                      | SHORT
   27                      | INT
   28                      | LONG
   29                      | FLOAT
   30                      | DOUBLE
   31                      | SIGNED
   32                      | UNSIGNED
   33                      | especificador_de_struct_o_union
   34                      | especificador_enum

   35 calificador_de_tipo: CONST
   36                    | VOLATILE

   37 especificador_de_struct_o_union: struct_o_union '{' lista_de_declaraciones_struct '}'
   38                                | struct_o_union IDENTIFICADOR '{' lista_de_declaraciones_struct '}'
   39                                | struct_o_union IDENTIFICADOR

   40 struct_o_union: STRUCT
   41               | UNION

   42 lista_de_declaraciones_struct: declaracion_struct
   43                              | lista_de_declaraciones_struct declaracion_struct

   44 lista_de_declaradores_inicial: declarador_inicial
   45                              | lista_de_declaradores_inicial ',' declarador_inicial

   46 declarador_inicial: declarador
   47                   | declarador '=' inicializador

   48 declaracion_struct: lista_de_calificadores_y_especificadores lista_de_declaradores_struct ';'

   49 lista_de_calificadores_y_especificadores: especificador_de_tipo
   50                                         | especificador_de_tipo lista_de_calificadores_y_especificadores
   51                                         | calificador_de_tipo
   52                                         | calificador_de_tipo lista_de_calificadores_y_especificadores

   53 lista_de_declaradores_struct: declarador_struct
   54                             | lista_de_declaradores_struct ',' declarador_struct

   55 declarador_struct: declarador

   56 especificador_enum: ENUM '{' lista_de_enumeradores '}'
   57                   | ENUM IDENTIFICADOR '{' lista_de_enumeradores '}'
   58                   | ENUM IDENTIFICADOR

   59 lista_de_enumeradores: enumerador
   60                      | lista_de_enumeradores ',' enumerador

   61 enumerador: IDENTIFICADOR
   62           | IDENTIFICADOR '=' expresion_constante

   63 declarador: declaracion_directa
   64           | puntero declaracion_directa

   65 declaracion_directa: IDENTIFICADOR
   66                    | '(' declarador ')'
   67                    | declaracion_directa '[' ']'
   68                    | declaracion_directa '[' expresion_constante ']'
   69                    | declaracion_directa '(' lista_de_tipos_de_parametros ')'
   70                    | declaracion_directa '(' ')'
   71                    | declaracion_directa '(' lista_de_identificadores ')'

   72 puntero: '*'
   73        | '*' lista_de_calificadores_de_tipo
   74        | '*' puntero
   75        | '*' lista_de_calificadores_de_tipo puntero

   76 lista_de_calificadores_de_tipo: calificador_de_tipo
   77                               | lista_de_calificadores_de_tipo calificador_de_tipo

   78 lista_de_tipos_de_parametros: lista_de_parametros
   79                             | lista_de_parametros ',' ELIPSIS

   80 lista_de_parametros: declaracion_de_parametro
   81                    | lista_de_parametros ',' declaracion_de_parametro

   82 declaracion_de_parametro: especificadores_de_declaracion
   83                         | especificadores_de_declaracion declarador
   84                         | especificadores_de_declaracion declarador_abstracto

   85 lista_de_identificadores: IDENTIFICADOR
   86                         | lista_de_identificadores ',' IDENTIFICADOR

   87 inicializador: expresion_de_asignacion
   88              | '{' lista_de_inicializadores '}'
   89              | '{' lista_de_inicializadores ',' '}'

   90 lista_de_inicializadores: inicializador
   91                         | lista_de_inicializadores ',' inicializador

   92 nombre_de_tipo: lista_de_calificadores_y_especificadores
   93               | lista_de_calificadores_y_especificadores declarador_abstracto

   94 declarador_abstracto: puntero
   95                     | declarador_abstracto_directo
   96                     | puntero declarador_abstracto_directo

   97 declarador_abstracto_directo: '(' declarador_abstracto ')'
   98                             | '[' expresion_constante ']'
   99                             | declarador_abstracto_directo '[' expresion_constante ']'
  100                             | '(' lista_de_tipos_de_parametros ')'
  101                             | declarador_abstracto_directo '(' lista_de_tipos_de_parametros ')'

  102 sentencia: sentencia_de_etiqueta
  103          | sentencia_de_expresion
  104          | sentencia_compuesta
  105          | sentencia_de_seleccion
  106          | sentencia_de_iteracion
  107          | sentencia_de_salto

  108 sentencia_de_etiqueta: IDENTIFICADOR ':' sentencia
  109                      | CASE expresion ':' sentencia
  110                      | DEFAULT ':' sentencia

  111 sentencia_de_expresion: ';'
  112                       | expresion ';'

  113 sentencia_compuesta: '{' '}'
  114                    | '{' lista_de_sentencias '}'
  115                    | '{' lista_de_declaraciones '}'
  116                    | '{' lista_de_declaraciones lista_de_sentencias '}'

  117 lista_de_sentencias: sentencia
  118                    | lista_de_sentencias sentencia

  119 sentencia_de_seleccion: IF '(' expresion ')' sentencia IF '(' expresion ')' sentencia ELSE sentencia
  120                       | SWITCH '(' expresion ')' sentencia

  121 sentencia_de_iteracion: WHILE '(' expresion ')' sentencia
  122                       | DO sentencia WHILE '(' expresion ')' ';'
  123                       | FOR '(' ';' ';' ')' sentencia
  124                       | FOR '(' expresion ';' ';' ')' sentencia
  125                       | FOR '(' ';' expresion ';' ')' sentencia
  126                       | FOR '(' ';' ';' expresion ')' sentencia
  127                       | FOR '(' expresion ';' expresion ';' ')' sentencia
  128                       | FOR '(' expresion ';' ';' expresion ')' sentencia
  129                       | FOR '(' ';' expresion ';' expresion ')' sentencia
  130                       | FOR '(' expresion ';' expresion ';' expresion ')' sentencia

  131 sentencia_de_salto: GOTO IDENTIFICADOR ';'
  132                   | CONTINUE ';'
  133                   | BREAK ';'
  134                   | RETURN ';'
  135                   | RETURN expresion ';'

  136 expresion: expresion_de_asignacion
  137          | expresion ',' expresion_de_asignacion

  138 expresion_de_asignacion: expresion_condicional
  139                        | expresion_unaria '=' expresion_de_asignacion

  140 expresion_condicional: expresion_logica_OR
  141                      | expresion_logica_OR '?' expresion ':' expresion_condicional

  142 expresion_constante: expresion_condicional

  143 expresion_logica_OR: expresion_logica_AND
  144                    | expresion_logica_OR OPERADOR_LOGICO_OR expresion_logica_AND

  145 expresion_logica_AND: expresion_OR_inclusiva
  146                     | expresion_logica_AND OPERADOR_LOGICO_AND expresion_OR_inclusiva

  147 expresion_OR_inclusiva: expresion_OR_exclusiva
  148                       | expresion_OR_inclusiva '|' expresion_OR_exclusiva

  149 expresion_OR_exclusiva: expresion_AND
  150                       | expresion_OR_exclusiva '^' expresion_AND

  151 expresion_AND: expresion_de_igualdad
  152              | expresion_AND '&' expresion_de_igualdad

  153 expresion_de_igualdad: expresion_relacional
  154                      | expresion_de_igualdad OPERADOR_DE_IGUALDAD expresion_relacional
  155                      | expresion_de_igualdad OPERADOR_DE_DESIGUALDAD expresion_relacional

  156 expresion_relacional: expresion_de_desplazamiento
  157                     | expresion_relacional '<' expresion_de_desplazamiento
  158                     | expresion_relacional MENOR_O_IGUAL expresion_de_desplazamiento
  159                     | expresion_relacional '>' expresion_de_desplazamiento
  160                     | expresion_relacional MAYOR_O_IGUAL expresion_de_desplazamiento

  161 expresion_de_desplazamiento: expresion_aditiva
  162                            | expresion_de_desplazamiento OPERADOR_DESPLAZAMIENTO_DE_BITS_A_IZQUIERDA expresion_aditiva
  163                            | expresion_de_desplazamiento OPERADOR_DESPLAZAMIENTO_DE_BITS_A_DERECHA expresion_aditiva

  164 expresion_aditiva: expresion_multiplicativa
  165                  | expresion_aditiva '+' expresion_multiplicativa
  166                  | expresion_aditiva '-' expresion_multiplicativa

  167 expresion_multiplicativa: expresion_de_casteo
  168                         | expresion_multiplicativa '*' expresion_de_casteo
  169                         | expresion_multiplicativa '/' expresion_de_casteo
  170                         | expresion_multiplicativa '%' expresion_de_casteo

  171 expresion_de_casteo: expresion_unaria
  172                    | '(' nombre_de_tipo ')' expresion_de_casteo

  173 expresion_unaria: expresion_posfija
  174                 | INCREMENTO expresion_unaria
  175                 | DECREMENTO expresion_unaria
  176                 | operador_unario expresion_de_casteo
  177                 | SIZEOF expresion_unaria
  178                 | SIZEOF '(' nombre_de_tipo ')'

  179 operador_unario: '~'
  180                | '!'
  181                | '+'
  182                | '-'
  183                | '*'
  184                | '&'

  185 expresion_posfija: expresion_primaria
  186                  | expresion_posfija '[' expresion ']'
  187                  | expresion_posfija '(' ')'
  188                  | expresion_posfija '(' lista_de_expresiones_de_argumentos ')'
  189                  | expresion_posfija '.' IDENTIFICADOR
  190                  | expresion_posfija OPERADOR_FLECHA IDENTIFICADOR
  191                  | expresion_posfija INCREMENTO
  192                  | expresion_posfija DECREMENTO

  193 expresion_primaria: IDENTIFICADOR
  194                   | constante
  195                   | '(' expresion ')'

  196 lista_de_expresiones_de_argumentos: expresion_de_asignacion
  197                                   | lista_de_expresiones_de_argumentos ',' expresion_de_asignacion

  198 constante: CONSTANTE_DECIMAL


Terminales con las reglas donde aparecen

    $end (0) 0
    '!' (33) 180
    '%' (37) 170
    '&' (38) 152 184
    '(' (40) 66 69 70 71 97 100 101 119 120 121 122 123 124 125 126 127 128 129 130 172 178 187 188 195
    ')' (41) 66 69 70 71 97 100 101 119 120 121 122 123 124 125 126 127 128 129 130 172 178 187 188 195
    '*' (42) 72 73 74 75 168 183
    '+' (43) 165 181
    ',' (44) 45 54 60 79 81 86 89 91 137 197
    '-' (45) 166 182
    '.' (46) 189
    '/' (47) 169
    ':' (58) 108 109 110 141
    ';' (59) 9 10 48 111 112 122 123 124 125 126 127 128 129 130 131 132 133 134 135
    '<' (60) 157
    '=' (61) 47 62 139
    '>' (62) 159
    '?' (63) 141
    '[' (91) 67 68 98 99 186
    ']' (93) 67 68 98 99 186
    '^' (94) 150
    '{' (123) 37 38 56 57 88 89 113 114 115 116
    '|' (124) 148
    '}' (125) 37 38 56 57 88 89 113 114 115 116
    '~' (126) 179
    error (256)
    IDENTIFICADOR <sval> (258) 38 39 57 58 61 62 65 85 86 108 131 189 190 193
    CONSTANTE_DECIMAL <ival> (259) 198
    OPERADOR_LOGICO_OR (260) 144
    OPERADOR_LOGICO_AND (261) 146
    OPERADOR_DE_IGUALDAD (262) 154
    OPERADOR_DE_DESIGUALDAD (263) 155
    OPERADOR_DESPLAZAMIENTO_DE_BITS_A_IZQUIERDA (264) 162
    OPERADOR_DESPLAZAMIENTO_DE_BITS_A_DERECHA (265) 163
    OPERADOR_DE_COMPARACION (266)
    MENOR_O_IGUAL (267) 158
    MAYOR_O_IGUAL (268) 160
    INCREMENTO (269) 174 191
    DECREMENTO (270) 175 192
    SIZEOF (271) 177 178
    OPERADOR_FLECHA (272) 190
    CASE (273) 109
    DEFAULT (274) 110
    VOID (275) 24
    CHAR (276) 25
    SHORT (277) 26
    INT (278) 27
    LONG (279) 28
    FLOAT (280) 29
    DOUBLE (281) 30
    SIGNED (282) 31
    UNSIGNED (283) 32
    CONST (284) 35
    VOLATILE (285) 36
    AUTO (286) 19
    REGISTER (287) 20
    STATIC (288) 21
    EXTERN (289) 22
    TYPEDEF (290) 23
    ELIPSIS (291) 79
    STRUCT (292) 40
    UNION (293) 41
    ENUM (294) 56 57 58
    IF (295) 119
    ELSE (296) 119
    SWITCH (297) 120
    WHILE (298) 121 122
    DO (299) 122
    FOR (300) 123 124 125 126 127 128 129 130
    GOTO (301) 131
    CONTINUE (302) 132
    BREAK (303) 133
    RETURN (304) 134 135
    DESPLAZAMIENTO_A_DERECHA (305)
    DESPLAZAMIENTO_A_IZQUIERDA (306)
    THEN (307)


No terminales con las reglas donde aparecen

    $accept (77)
        on left: 0
    unidad_de_traduccion (78)
        on left: 1 2
        on right: 0 2
    declaracion_externa (79)
        on left: 3 4
        on right: 1 2
    definicion_de_funcion (80)
        on left: 5 6 7 8
        on right: 3
    declaracion (81)
        on left: 9 10
        on right: 4 11 12
    lista_de_declaraciones (82)
        on left: 11 12
        on right: 6 8 12 115 116
    especificadores_de_declaracion (83)
        on left: 13 14 15 16 17 18
        on right: 7 8 9 10 14 16 18 82 83 84
    especificador_de_clase_de_almacenamiento (84)
        on left: 19 20 21 22 23
        on right: 13 14
    especificador_de_tipo (85)
        on left: 24 25 26 27 28 29 30 31 32 33 34
        on right: 15 16 49 50
    calificador_de_tipo (86)
        on left: 35 36
        on right: 17 18 51 52 76 77
    especificador_de_struct_o_union (87)
        on left: 37 38 39
        on right: 33
    struct_o_union (88)
        on left: 40 41
        on right: 37 38 39
    lista_de_declaraciones_struct (89)
        on left: 42 43
        on right: 37 38 43
    lista_de_declaradores_inicial (90)
        on left: 44 45
        on right: 10 45
    declarador_inicial (91)
        on left: 46 47
        on right: 44 45
    declaracion_struct (92)
        on left: 48
        on right: 42 43
    lista_de_calificadores_y_especificadores (93)
        on left: 49 50 51 52
        on right: 48 50 52 92 93
    lista_de_declaradores_struct (94)
        on left: 53 54
        on right: 48 54
    declarador_struct (95)
        on left: 55
        on right: 53 54
    especificador_enum (96)
        on left: 56 57 58
        on right: 34
    lista_de_enumeradores (97)
        on left: 59 60
        on right: 56 57 60
    enumerador (98)
        on left: 61 62
        on right: 59 60
    declarador (99)
        on left: 63 64
        on right: 5 6 7 8 46 47 55 66 83
    declaracion_directa (100)
        on left: 65 66 67 68 69 70 71
        on right: 63 64 67 68 69 70 71
    puntero (101)
        on left: 72 73 74 75
        on right: 64 74 75 94 96
    lista_de_calificadores_de_tipo (102)
        on left: 76 77
        on right: 73 75 77
    lista_de_tipos_de_parametros (103)
        on left: 78 79
        on right: 69 100 101
    lista_de_parametros (104)
        on left: 80 81
        on right: 78 79 81
    declaracion_de_parametro (105)
        on left: 82 83 84
        on right: 80 81
    lista_de_identificadores (106)
        on left: 85 86
        on right: 71 86
    inicializador (107)
        on left: 87 88 89
        on right: 47 90 91
    lista_de_inicializadores (108)
        on left: 90 91
        on right: 88 89 91
    nombre_de_tipo (109)
        on left: 92 93
        on right: 172 178
    declarador_abstracto (110)
        on left: 94 95 96
        on right: 84 93 97
    declarador_abstracto_directo (111)
        on left: 97 98 99 100 101
        on right: 95 96 99 101
    sentencia (112)
        on left: 102 103 104 105 106 107
        on right: 108 109 110 117 118 119 120 121 122 123 124 125 126 127 128 129 130
    sentencia_de_etiqueta (113)
        on left: 108 109 110
        on right: 102
    sentencia_de_expresion (114)
        on left: 111 112
        on right: 103
    sentencia_compuesta (115)
        on left: 113 114 115 116
        on right: 5 6 7 8 104
    lista_de_sentencias (116)
        on left: 117 118
        on right: 114 116 118
    sentencia_de_seleccion (117)
        on left: 119 120
        on right: 105
    sentencia_de_iteracion (118)
        on left: 121 122 123 124 125 126 127 128 129 130
        on right: 106
    sentencia_de_salto (119)
        on left: 131 132 133 134 135
        on right: 107
    expresion (120)
        on left: 136 137
        on right: 109 112 119 120 121 122 124 125 126 127 128 129 130 135 137 141 186 195
    expresion_de_asignacion (121)
        on left: 138 139
        on right: 87 136 137 139 196 197
    expresion_condicional (122)
        on left: 140 141
        on right: 138 141 142
    expresion_constante (123)
        on left: 142
        on right: 62 68 98 99
    expresion_logica_OR (124)
        on left: 143 144
        on right: 140 141 144
    expresion_logica_AND (125)
        on left: 145 146
        on right: 143 144 146
    expresion_OR_inclusiva (126)
        on left: 147 148
        on right: 145 146 148
    expresion_OR_exclusiva (127)
        on left: 149 150
        on right: 147 148 150
    expresion_AND (128)
        on left: 151 152
        on right: 149 150 152
    expresion_de_igualdad (129)
        on left: 153 154 155
        on right: 151 152 154 155
    expresion_relacional (130)
        on left: 156 157 158 159 160
        on right: 153 154 155 157 158 159 160
    expresion_de_desplazamiento (131)
        on left: 161 162 163
        on right: 156 157 158 159 160 162 163
    expresion_aditiva (132)
        on left: 164 165 166
        on right: 161 162 163 165 166
    expresion_multiplicativa (133)
        on left: 167 168 169 170
        on right: 164 165 166 168 169 170
    expresion_de_casteo (134)
        on left: 171 172
        on right: 167 168 169 170 172 176
    expresion_unaria (135)
        on left: 173 174 175 176 177 178
        on right: 139 171 174 175 177
    operador_unario (136)
        on left: 179 180 181 182 183 184
        on right: 176
    expresion_posfija (137)
        on left: 185 186 187 188 189 190 191 192
        on right: 173 186 187 188 189 190 191 192
    expresion_primaria (138)
        on left: 193 194 195
        on right: 185
    lista_de_expresiones_de_argumentos (139)
        on left: 196 197
        on right: 188 197
    constante (140)
        on left: 198
        on right: 194


Estado 0

    0 $accept: • unidad_de_traduccion $end

    IDENTIFICADOR  desplazar e ir al estado 1
    VOID           desplazar e ir al estado 2
    CHAR           desplazar e ir al estado 3
    SHORT          desplazar e ir al estado 4
    INT            desplazar e ir al estado 5
    LONG           desplazar e ir al estado 6
    FLOAT          desplazar e ir al estado 7
    DOUBLE         desplazar e ir al estado 8
    SIGNED         desplazar e ir al estado 9
    UNSIGNED       desplazar e ir al estado 10
    CONST          desplazar e ir al estado 11
    VOLATILE       desplazar e ir al estado 12
    AUTO           desplazar e ir al estado 13
    REGISTER       desplazar e ir al estado 14
    STATIC         desplazar e ir al estado 15
    EXTERN         desplazar e ir al estado 16
    TYPEDEF        desplazar e ir al estado 17
    STRUCT         desplazar e ir al estado 18
    UNION          desplazar e ir al estado 19
    ENUM           desplazar e ir al estado 20
    '*'            desplazar e ir al estado 21
    '('            desplazar e ir al estado 22

    unidad_de_traduccion                      ir al estado 23
    declaracion_externa                       ir al estado 24
    definicion_de_funcion                     ir al estado 25
    declaracion                               ir al estado 26
    especificadores_de_declaracion            ir al estado 27
    especificador_de_clase_de_almacenamiento  ir al estado 28
    especificador_de_tipo                     ir al estado 29
    calificador_de_tipo                       ir al estado 30
    especificador_de_struct_o_union           ir al estado 31
    struct_o_union                            ir al estado 32
    especificador_enum                        ir al estado 33
    declarador                                ir al estado 34
    declaracion_directa                       ir al estado 35
    puntero                                   ir al estado 36


Estado 1

   65 declaracion_directa: IDENTIFICADOR •

    $default  reduce usando la regla 65 (declaracion_directa)


Estado 2

   24 especificador_de_tipo: VOID •

    $default  reduce usando la regla 24 (especificador_de_tipo)


Estado 3

   25 especificador_de_tipo: CHAR •

    $default  reduce usando la regla 25 (especificador_de_tipo)


Estado 4

   26 especificador_de_tipo: SHORT •

    $default  reduce usando la regla 26 (especificador_de_tipo)


Estado 5

   27 especificador_de_tipo: INT •

    $default  reduce usando la regla 27 (especificador_de_tipo)


Estado 6

   28 especificador_de_tipo: LONG •

    $default  reduce usando la regla 28 (especificador_de_tipo)


Estado 7

   29 especificador_de_tipo: FLOAT •

    $default  reduce usando la regla 29 (especificador_de_tipo)


Estado 8

   30 especificador_de_tipo: DOUBLE •

    $default  reduce usando la regla 30 (especificador_de_tipo)


Estado 9

   31 especificador_de_tipo: SIGNED •

    $default  reduce usando la regla 31 (especificador_de_tipo)


Estado 10

   32 especificador_de_tipo: UNSIGNED •

    $default  reduce usando la regla 32 (especificador_de_tipo)


Estado 11

   35 calificador_de_tipo: CONST •

    $default  reduce usando la regla 35 (calificador_de_tipo)


Estado 12

   36 calificador_de_tipo: VOLATILE •

    $default  reduce usando la regla 36 (calificador_de_tipo)


Estado 13

   19 especificador_de_clase_de_almacenamiento: AUTO •

    $default  reduce usando la regla 19 (especificador_de_clase_de_almacenamiento)


Estado 14

   20 especificador_de_clase_de_almacenamiento: REGISTER •

    $default  reduce usando la regla 20 (especificador_de_clase_de_almacenamiento)


Estado 15

   21 especificador_de_clase_de_almacenamiento: STATIC •

    $default  reduce usando la regla 21 (especificador_de_clase_de_almacenamiento)


Estado 16

   22 especificador_de_clase_de_almacenamiento: EXTERN •

    $default  reduce usando la regla 22 (especificador_de_clase_de_almacenamiento)


Estado 17

   23 especificador_de_clase_de_almacenamiento: TYPEDEF •

    $default  reduce usando la regla 23 (especificador_de_clase_de_almacenamiento)


Estado 18

   40 struct_o_union: STRUCT •

    $default  reduce usando la regla 40 (struct_o_union)


Estado 19

   41 struct_o_union: UNION •

    $default  reduce usando la regla 41 (struct_o_union)


Estado 20

   56 especificador_enum: ENUM • '{' lista_de_enumeradores '}'
   57                   | ENUM • IDENTIFICADOR '{' lista_de_enumeradores '}'
   58                   | ENUM • IDENTIFICADOR

    IDENTIFICADOR  desplazar e ir al estado 37
    '{'            desplazar e ir al estado 38


Estado 21

   72 puntero: '*' •
   73        | '*' • lista_de_calificadores_de_tipo
   74        | '*' • puntero
   75        | '*' • lista_de_calificadores_de_tipo puntero

    CONST     desplazar e ir al estado 11
    VOLATILE  desplazar e ir al estado 12
    '*'       desplazar e ir al estado 21

    $default  reduce usando la regla 72 (puntero)

    calificador_de_tipo             ir al estado 39
    puntero                         ir al estado 40
    lista_de_calificadores_de_tipo  ir al estado 41


Estado 22

   66 declaracion_directa: '(' • declarador ')'

    IDENTIFICADOR  desplazar e ir al estado 1
    '*'            desplazar e ir al estado 21
    '('            desplazar e ir al estado 22

    declarador           ir al estado 42
    declaracion_directa  ir al estado 35
    puntero              ir al estado 36


Estado 23

    0 $accept: unidad_de_traduccion • $end
    2 unidad_de_traduccion: unidad_de_traduccion • declaracion_externa

    $end           desplazar e ir al estado 43
    IDENTIFICADOR  desplazar e ir al estado 1
    VOID           desplazar e ir al estado 2
    CHAR           desplazar e ir al estado 3
    SHORT          desplazar e ir al estado 4
    INT            desplazar e ir al estado 5
    LONG           desplazar e ir al estado 6
    FLOAT          desplazar e ir al estado 7
    DOUBLE         desplazar e ir al estado 8
    SIGNED         desplazar e ir al estado 9
    UNSIGNED       desplazar e ir al estado 10
    CONST          desplazar e ir al estado 11
    VOLATILE       desplazar e ir al estado 12
    AUTO           desplazar e ir al estado 13
    REGISTER       desplazar e ir al estado 14
    STATIC         desplazar e ir al estado 15
    EXTERN         desplazar e ir al estado 16
    TYPEDEF        desplazar e ir al estado 17
    STRUCT         desplazar e ir al estado 18
    UNION          desplazar e ir al estado 19
    ENUM           desplazar e ir al estado 20
    '*'            desplazar e ir al estado 21
    '('            desplazar e ir al estado 22

    declaracion_externa                       ir al estado 44
    definicion_de_funcion                     ir al estado 25
    declaracion                               ir al estado 26
    especificadores_de_declaracion            ir al estado 27
    especificador_de_clase_de_almacenamiento  ir al estado 28
    especificador_de_tipo                     ir al estado 29
    calificador_de_tipo                       ir al estado 30
    especificador_de_struct_o_union           ir al estado 31
    struct_o_union                            ir al estado 32
    especificador_enum                        ir al estado 33
    declarador                                ir al estado 34
    declaracion_directa                       ir al estado 35
    puntero                                   ir al estado 36


Estado 24

    1 unidad_de_traduccion: declaracion_externa •

    $default  reduce usando la regla 1 (unidad_de_traduccion)


Estado 25

    3 declaracion_externa: definicion_de_funcion •

    $default  reduce usando la regla 3 (declaracion_externa)


Estado 26

    4 declaracion_externa: declaracion •

    $default  reduce usando la regla 4 (declaracion_externa)


Estado 27

    7 definicion_de_funcion: especificadores_de_declaracion • declarador sentencia_compuesta
    8                      | especificadores_de_declaracion • declarador lista_de_declaraciones sentencia_compuesta
    9 declaracion: especificadores_de_declaracion • ';'
   10            | especificadores_de_declaracion • lista_de_declaradores_inicial ';'

    IDENTIFICADOR  desplazar e ir al estado 1
    '*'            desplazar e ir al estado 21
    '('            desplazar e ir al estado 22
    ';'            desplazar e ir al estado 45

    lista_de_declaradores_inicial  ir al estado 46
    declarador_inicial             ir al estado 47
    declarador                     ir al estado 48
    declaracion_directa            ir al estado 35
    puntero                        ir al estado 36


Estado 28

   13 especificadores_de_declaracion: especificador_de_clase_de_almacenamiento •
   14                               | especificador_de_clase_de_almacenamiento • especificadores_de_declaracion

    VOID      desplazar e ir al estado 2
    CHAR      desplazar e ir al estado 3
    SHORT     desplazar e ir al estado 4
    INT       desplazar e ir al estado 5
    LONG      desplazar e ir al estado 6
    FLOAT     desplazar e ir al estado 7
    DOUBLE    desplazar e ir al estado 8
    SIGNED    desplazar e ir al estado 9
    UNSIGNED  desplazar e ir al estado 10
    CONST     desplazar e ir al estado 11
    VOLATILE  desplazar e ir al estado 12
    AUTO      desplazar e ir al estado 13
    REGISTER  desplazar e ir al estado 14
    STATIC    desplazar e ir al estado 15
    EXTERN    desplazar e ir al estado 16
    TYPEDEF   desplazar e ir al estado 17
    STRUCT    desplazar e ir al estado 18
    UNION     desplazar e ir al estado 19
    ENUM      desplazar e ir al estado 20

    $default  reduce usando la regla 13 (especificadores_de_declaracion)

    especificadores_de_declaracion            ir al estado 49
    especificador_de_clase_de_almacenamiento  ir al estado 28
    especificador_de_tipo                     ir al estado 29
    calificador_de_tipo                       ir al estado 30
    especificador_de_struct_o_union           ir al estado 31
    struct_o_union                            ir al estado 32
    especificador_enum                        ir al estado 33


Estado 29

   15 especificadores_de_declaracion: especificador_de_tipo •
   16                               | especificador_de_tipo • especificadores_de_declaracion

    VOID      desplazar e ir al estado 2
    CHAR      desplazar e ir al estado 3
    SHORT     desplazar e ir al estado 4
    INT       desplazar e ir al estado 5
    LONG      desplazar e ir al estado 6
    FLOAT     desplazar e ir al estado 7
    DOUBLE    desplazar e ir al estado 8
    SIGNED    desplazar e ir al estado 9
    UNSIGNED  desplazar e ir al estado 10
    CONST     desplazar e ir al estado 11
    VOLATILE  desplazar e ir al estado 12
    AUTO      desplazar e ir al estado 13
    REGISTER  desplazar e ir al estado 14
    STATIC    desplazar e ir al estado 15
    EXTERN    desplazar e ir al estado 16
    TYPEDEF   desplazar e ir al estado 17
    STRUCT    desplazar e ir al estado 18
    UNION     desplazar e ir al estado 19
    ENUM      desplazar e ir al estado 20

    $default  reduce usando la regla 15 (especificadores_de_declaracion)

    especificadores_de_declaracion            ir al estado 50
    especificador_de_clase_de_almacenamiento  ir al estado 28
    especificador_de_tipo                     ir al estado 29
    calificador_de_tipo                       ir al estado 30
    especificador_de_struct_o_union           ir al estado 31
    struct_o_union                            ir al estado 32
    especificador_enum                        ir al estado 33


Estado 30

   17 especificadores_de_declaracion: calificador_de_tipo •
   18                               | calificador_de_tipo • especificadores_de_declaracion

    VOID      desplazar e ir al estado 2
    CHAR      desplazar e ir al estado 3
    SHORT     desplazar e ir al estado 4
    INT       desplazar e ir al estado 5
    LONG      desplazar e ir al estado 6
    FLOAT     desplazar e ir al estado 7
    DOUBLE    desplazar e ir al estado 8
    SIGNED    desplazar e ir al estado 9
    UNSIGNED  desplazar e ir al estado 10
    CONST     desplazar e ir al estado 11
    VOLATILE  desplazar e ir al estado 12
    AUTO      desplazar e ir al estado 13
    REGISTER  desplazar e ir al estado 14
    STATIC    desplazar e ir al estado 15
    EXTERN    desplazar e ir al estado 16
    TYPEDEF   desplazar e ir al estado 17
    STRUCT    desplazar e ir al estado 18
    UNION     desplazar e ir al estado 19
    ENUM      desplazar e ir al estado 20

    $default  reduce usando la regla 17 (especificadores_de_declaracion)

    especificadores_de_declaracion            ir al estado 51
    especificador_de_clase_de_almacenamiento  ir al estado 28
    especificador_de_tipo                     ir al estado 29
    calificador_de_tipo                       ir al estado 30
    especificador_de_struct_o_union           ir al estado 31
    struct_o_union                            ir al estado 32
    especificador_enum                        ir al estado 33


Estado 31

   33 especificador_de_tipo: especificador_de_struct_o_union •

    $default  reduce usando la regla 33 (especificador_de_tipo)


Estado 32

   37 especificador_de_struct_o_union: struct_o_union • '{' lista_de_declaraciones_struct '}'
   38                                | struct_o_union • IDENTIFICADOR '{' lista_de_declaraciones_struct '}'
   39                                | struct_o_union • IDENTIFICADOR

    IDENTIFICADOR  desplazar e ir al estado 52
    '{'            desplazar e ir al estado 53


Estado 33

   34 especificador_de_tipo: especificador_enum •

    $default  reduce usando la regla 34 (especificador_de_tipo)


Estado 34

    5 definicion_de_funcion: declarador • sentencia_compuesta
    6                      | declarador • lista_de_declaraciones sentencia_compuesta

    VOID      desplazar e ir al estado 2
    CHAR      desplazar e ir al estado 3
    SHORT     desplazar e ir al estado 4
    INT       desplazar e ir al estado 5
    LONG      desplazar e ir al estado 6
    FLOAT     desplazar e ir al estado 7
    DOUBLE    desplazar e ir al estado 8
    SIGNED    desplazar e ir al estado 9
    UNSIGNED  desplazar e ir al estado 10
    CONST     desplazar e ir al estado 11
    VOLATILE  desplazar e ir al estado 12
    AUTO      desplazar e ir al estado 13
    REGISTER  desplazar e ir al estado 14
    STATIC    desplazar e ir al estado 15
    EXTERN    desplazar e ir al estado 16
    TYPEDEF   desplazar e ir al estado 17
    STRUCT    desplazar e ir al estado 18
    UNION     desplazar e ir al estado 19
    ENUM      desplazar e ir al estado 20
    '{'       desplazar e ir al estado 54

    declaracion                               ir al estado 55
    lista_de_declaraciones                    ir al estado 56
    especificadores_de_declaracion            ir al estado 57
    especificador_de_clase_de_almacenamiento  ir al estado 28
    especificador_de_tipo                     ir al estado 29
    calificador_de_tipo                       ir al estado 30
    especificador_de_struct_o_union           ir al estado 31
    struct_o_union                            ir al estado 32
    especificador_enum                        ir al estado 33
    sentencia_compuesta                       ir al estado 58


Estado 35

   63 declarador: declaracion_directa •
   67 declaracion_directa: declaracion_directa • '[' ']'
   68                    | declaracion_directa • '[' expresion_constante ']'
   69                    | declaracion_directa • '(' lista_de_tipos_de_parametros ')'
   70                    | declaracion_directa • '(' ')'
   71                    | declaracion_directa • '(' lista_de_identificadores ')'
